--- a/Aplikacija/Prototip/Projekat_1/appsettings.json
+++ b/Aplikacija/Prototip/Projekat_1/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "Konekcija" : "Server=(localhost)\\baza_swe;Port=3307;Database=;Uid=root;Pwd=root;Trusted_Connection=True;"
+  },
+  "AllowedHosts" : "*"
+
 }
