15-04 dodati modeli (folder Model)

--- a/Aplikacija/Prototip/Projekat_1/appsettings.json
+++ b/Aplikacija/Prototip/Projekat_1/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Konekcija" : "Server=(localhost)\\baza_swe;Port=3307;Database=;Uid=root;Pwd=root;Trusted_Connection=True;"
+    "Konekcija" : "Server=localhost;Port=3307;Database=swe;;Uid=root;Pwd=root;"
   },
   "AllowedHosts" : "*"
 
